[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://experiments/multiple_herds/herdling/Herdling.gd" type="Script" id=2]
[ext_resource path="res://experiments/multiple_herds/herdling/StateMachine.gd" type="Script" id=3]
[ext_resource path="res://experiments/multiple_herds/herdling/IdleState.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 15.0

[node name="Herdling" type="KinematicBody2D"]
position = Vector2( 273.608, 168.921 )
input_pickable = true
collision_layer = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="icon" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )

[node name="IdleState" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="FollowLeader" type="Node" parent="StateMachine"]

[node name="SearchLeader" type="Node" parent="StateMachine"]

[node name="LeaderState" type="Node" parent="StateMachine"]

[node name="Dead" type="Node" parent="StateMachine"]

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = 20.0
margin_right = 100.0
margin_bottom = 60.0
grow_horizontal = 2
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
